@@ -7,6 +7,7 @@
 - Allow APIs to set HTTP status code
 - New hook HaveAPI::Server.description_exception
 - Online doc: link to prebuilt haveapi-webui at webui.haveapi.org
+- Print errors and exceptions in development mode
 
 * Tue Oct 18 2016 - version 0.6.0
 - Token authentication: fix output of action renew
